# clipboard-herald

./: Cargo.toml  README.md  build.rs  config.toml
src/: app.rs  clipboard.rs  config.rs  main.rs
src/win32/: clipboard.rs  mod.rs
