[package]
name = "clipboard-herald"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
windows = { version = "0.51.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
winres = "0.1.12"
url = "2.5.2"

[build-dependencies]
winres = "0.1.12"
